--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Isybank
-version: '1.0.0'
+version: 1.2.1
 main: dev.sodiograaz.internal.IsybankEconomy
 api-version: '1.21'
 authors: [ Sodiograaz ]
